Added a list of projects, the first one is the first week assignment and the rest is just dummy content

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,49 @@
       <article>
         <header>
           <h1>Projects</h1>
-        </header>  
+        </header>
+        <ul>
+          <li>
+            <article>
+              <header>
+                <a href="https://github.com/tamararivera/semantic_tags"><h1>Semantic tags assignment</h1></a>
+              </header>
+              <img src="./images/semantic-tags.png" width="350" height="200">
+            </article>
+          </li>
+          <li>
+            <article>
+              <header>
+                <a href="#"><h1>A project</h1></a>
+              </header>
+              <img src="http://lorempixel.com/200/200/cats/">
+            </article>
+          </li>
+          <li>
+            <article>
+              <header>
+                <a href="#"><h1>Very interesting project</h1></a>
+              </header>
+              <img src="http://lorempixel.com/200/200/cats/">
+            </article>
+          </li>
+          <li>
+            <article>
+              <header>
+                <a href="#"><h1>Some awesome project</h1></a>
+              </header>
+              <img src="http://lorempixel.com/200/200/cats/">
+            </article>
+          </li>
+          <li>
+            <article>
+              <header>
+                <a href="#"><h1>Another project</h1></a>
+              </header>
+              <img src="http://lorempixel.com/200/200/cats/">
+            </article>
+          </li>
+        </ul>
       </article>
     </main>
     <footer>
