Removed the footer tag inside the footer.

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
       </article>
     </main>
     <footer>
-      <footer><p>&#169; 2016 Tamara Rivera</p></footer>
+      <p>&#169; 2016 Tamara Rivera</p>
     </footer>
     
   </body>
