--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Hi! I'm Tamara Rivera.</p>
         <p>I'm a software developer engineer from Santiago, Chile and I'm currently living in Seattle.</p>
         <p>I have 3 years of experience working as a full stack developer.</p>
-        <p>If you want to contact me <a href="mailto:tamita.rivera@gmail.com">here</a></p>
+        <p>If you want to contact me, you can do it <a href="mailto:tamita.rivera@gmail.com">here</a></p>
       </article>
     </main>
     <footer>
