--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>About me - Tamara Rivera</title>
+    <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
   </head>
   <body>
     <nav>
