--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
     <nav>
       <ul>
-        <li>Tamara Rivera</li>
-        <li><a href="./index.html">About Me</a></li>
+        <li><a href="./index.html">About me</a></li>
         <li><a href="./projects.html">Projects</a></li>
       </ul>
     </nav>
