--- a/projects.html
+++ b/projects.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>About me - Tamara Rivera</title>
+    <title>Projects - Tamara Rivera</title>
     <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
   </head>
   <body>
     <nav>
       <ul>
-        <li>Tamara Rivera</li>
-        <li><a href="./index.html">About Me</a></li>
+        <li><a href="./index.html">About me</a></li>
         <li><a href="./projects.html">Projects</a></li>
       </ul>
     </nav>
