Added alts to all the images.

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
             <header>
               <a href="https://github.com/tamararivera/semantic_tags"><h1>Semantic tags assignment</h1></a>
             </header>
-            <img src="./images/semantic-tags.png" width="350" height="200">
+            <img src="./images/semantic-tags.png" width="350" height="200" alt="semantic tags assigment image">
           </article>
         </li>
         <li>
@@ -28,7 +28,7 @@
             <header>
               <a href="#"><h1>A project</h1></a>
             </header>
-            <img src="http://lorempixel.com/200/200/cats/">
+            <img src="http://lorempixel.com/200/200/cats/" alt="A project image">
           </article>
         </li>
         <li>
@@ -36,7 +36,7 @@
             <header>
               <a href="#"><h1>Very interesting project</h1></a>
             </header>
-            <img src="http://lorempixel.com/200/200/cats/">
+            <img src="http://lorempixel.com/200/200/cats/" alt="Very interesting project image">
           </article>
         </li>
         <li>
@@ -44,7 +44,7 @@
             <header>
               <a href="#"><h1>Some awesome project</h1></a>
             </header>
-            <img src="http://lorempixel.com/200/200/cats/">
+            <img src="http://lorempixel.com/200/200/cats/" alt="Some awesome project image">
           </article>
         </li>
         <li>
@@ -52,7 +52,7 @@
             <header>
               <a href="#"><h1>Another project</h1></a>
             </header>
-            <img src="http://lorempixel.com/200/200/cats/">
+            <img src="http://lorempixel.com/200/200/cats/" alt="Another project image">
           </article>
         </li>
       </ul>
