Added styles for the projects list.

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     </nav>
     <main>
       <h2>Projects</h2>
-      <ul>
+      <ul id="projects-list">
         <li>
           <article>
             <header>
