Added an alt to the picture of myself.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>I'm a software developer engineer from Santiago, Chile and I'm currently living in Seattle.</p>
         <p>I have 3 years of experience working as a full stack developer.</p>
         <p>If you want to contact me, you can do it <a href="mailto:tamita.rivera@gmail.com">here</a></p>
-        <img id="index-image" src="http://s.gravatar.com/avatar/a2fbe30c4d672011afd9239ea1202a6e?s=200">
+        <img id="index-image" src="http://s.gravatar.com/avatar/a2fbe30c4d672011afd9239ea1202a6e?s=200" alt="A picture of myself">
       </article>
     </main>
     <footer>
