--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>About me - Tamara Rivera</title>
+    <script src="https://use.fontawesome.com/728dc040fb.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
   </head>
   <body>
