--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
       </ul>
     </main>
     <footer>
-      <p>&#169; 2016 Tamara Rivera</p>
+      <p><i class="fa fa-copyright" aria-hidden="true"></i> 2016 Tamara Rivera</p>
     </footer>
   </body>
 </html>
