--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <nav>
       <ul>
-        <li><a href="./index.html">About me</a></li>
-        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./index.html"><i class="fa fa-info"></i> About me</a></li>
+        <li><a href="./projects.html"><i class="fa fa-briefcase"></i> Projects</a></li>
       </ul>
     </nav>
     <main>
