Improved the style for the social media icons.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <p>Hi! I'm Tamara Rivera.</p>
         <p>I'm a software developer engineer from Santiago, Chile and I'm currently living in Seattle.</p>
         <p>I have 3 years of experience working as a full stack developer and I'm currently improving my skills as frontend developer.</p>
-        <p>
-          <a href="mailto:tamita.rivera@gmail.com"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
-          <a href="https://www.facebook.com/tamara.rivera.714"><i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/tamarariveraf"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
-          <a href="https://github.com/tamararivera"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+        <p class="social-media">
+          <a href="mailto:tamita.rivera@gmail.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/tamara.rivera.714"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/tamarariveraf"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+          <a href="https://github.com/tamararivera"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
         </p>
         <img id="index-image" src="http://s.gravatar.com/avatar/a2fbe30c4d672011afd9239ea1202a6e?s=200" alt="A picture of myself">
       </article>
