Added descriptions to the projects.

--- a/projects.html
+++ b/projects.html
@@ -19,9 +19,10 @@
         <li>
           <article>
             <header>
-              <a href="https://github.com/tamararivera/semantic_tags"><h1>Semantic tags assignment</h1></a>
+              <a href="https://github.com/tamararivera/semantic_tags"><h1>Semantic tags</h1></a>
             </header>
             <img src="./images/semantic-tags.png" width="350" height="200" alt="semantic tags assigment image">
+            <p>Example project to learn how to use the semantic tags on HTML5</p>
           </article>
         </li>
         <li>
@@ -30,6 +31,7 @@
               <a href="#"><h1>A project</h1></a>
             </header>
             <img src="http://lorempixel.com/200/200/cats/" alt="A project image">
+            <p>Cat is love, cat is life. Instantly break out into full speed gallop across the house for no reason. Stand in front of the computer screen. Make meme, make cute face stare at wall turn and meow stare at wall some more meow again continue staring meowzer! but bathe private parts with tongue then lick owner's face.</p>
           </article>
         </li>
         <li>
@@ -38,6 +40,7 @@
               <a href="#"><h1>Very interesting project</h1></a>
             </header>
             <img src="http://lorempixel.com/200/200/cats/" alt="Very interesting project image">
+            <p>Vommit food and eat it again meowing non stop for food yet lick butt, or have secret plans or leave hair everywhere, yet destroy the blinds. Run in circles hopped up on catnip, so steal the warm chair right after you get up groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked! i like big cats and i can not lie so chase dog then run away or purr.</p>
           </article>
         </li>
         <li>
@@ -46,6 +49,7 @@
               <a href="#"><h1>Some awesome project</h1></a>
             </header>
             <img src="http://lorempixel.com/200/200/cats/" alt="Some awesome project image">
+            <p>Meow to be let in meowwww eat a plant, kill a hand for attack dog, run away and pretend to be victim. Instantly break out into full speed gallop across the house for no reason going to catch the red dot today going to catch the red dot today, but knock dish off table head butt cant eat out of my own dish my left donut is missing, as is my right and get video posted to internet for chasing red dot.</p>
           </article>
         </li>
         <li>
@@ -54,6 +58,7 @@
               <a href="#"><h1>Another project</h1></a>
             </header>
             <img src="http://lorempixel.com/200/200/cats/" alt="Another project image">
+            <p>Scratch the furniture drink water out of the faucet so hiss at vacuum cleaner and brown cats with pink ears. Attack feet hola te quiero meow to be let in sit and stare meowwww spread kitty litter all over house. </p>
           </article>
         </li>
       </ul>
