--- a/interests.html
+++ b/interests.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -29,7 +29,7 @@
           </button>
           <a class="navbar-brand" href="index.html">Tamara Rivera</a>
         </div>
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="navbar">
           <ul class="nav navbar-nav">
             <li><a href="index.html">About me</a></li>
             <li><a href="projects.html">Projects</a></li>
@@ -38,7 +38,15 @@
         </div>
       </div>
     </nav>
-
+    <main>
+    </main>
+    <footer>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <div class="container">
+          <p class="navbar-text navbar-right"><span class="glyphicon glyphicon-copyright-mark"></span> 2016 Tamara Rivera</p>
+        </div>
+      </nav>
+    </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
