--- a/interests.html
+++ b/interests.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <style>
+      body { padding-bottom: 70px; }
+    </style>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -38,7 +41,51 @@
         </div>
       </div>
     </nav>
-    <main>
+    <main class="container-fluid">
+      <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
+          <header><h1 class="text-center">Other interests</h1></header>
+          <article>
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <header><h2>Irish dancing</h2></header>
+                <div class="row">
+                  <div class="col-sm-4">
+                    <img class="img-responsive">
+                  </div>
+                  <div class="col-sm-8">text here</div>
+                </div>
+              </div>
+            </div>
+          </article>
+          <article>
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <header><h2>Quilting</h2></header>
+                <div class="row">
+                  <div class="col-sm-4">
+                    <img class="img-responsive" src="images/quilt.jpg">
+                  </div>
+                  <div class="col-sm-8">text here</div>
+                </div>
+              </div>
+            </div>
+          </article>
+          <article>
+            <div class="panel panel-default">
+              <div class="panel-body">
+                <header><h2>Baking</h2></header>
+                <div class="row">
+                  <div class="col-sm-4">
+                    <img class="img-responsive" src="images/baking.jpg">
+                  </div>
+                  <div class="col-sm-8">text here</div>
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
     </main>
     <footer>
       <nav class="navbar navbar-inverse navbar-fixed-bottom">
