--- a/interests.html
+++ b/interests.html
@@ -16,6 +16,10 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+      /*as seen on the Bootstrap documentation for preventing the footer to cover some of the page*/
+      body { padding-bottom: 70px; }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-default">
