Added the text for the irish dance part.

--- a/interests.html
+++ b/interests.html
@@ -37,7 +37,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">About me</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li class="active"><a href="interests.html">Interests <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="interests.html">Interests<span class="sr-only">(current)</span></a></li>
           </ul>
         </div>
       </div>
@@ -54,7 +54,15 @@
                   <div class="col-sm-4">
                     <img class="img-responsive" src="images/irish.jpg">
                   </div>
-                  <div class="col-sm-8">text here</div>
+                  <div class="col-sm-8">
+                    <p>I started to dance in Santiago, Chile and I have been dancing for aproximately two and a half years.</p>
+                    <p>I fall in love with irish dance when I was in high school and my dance teacher was learning it, she teach
+                    me some steps and I really like it.</p>
+                    <p>When I finally graduated from college, I started to formally go to irish dance classes.</p>
+                    <div class="well well-sm">
+                      <p>This is a picture of my second performance back in Chile. I'm the second from left to right.</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
