Added the text for the quilting part.

--- a/interests.html
+++ b/interests.html
@@ -75,7 +75,13 @@
                   <div class="col-sm-4">
                     <img class="img-responsive" src="images/quilt.jpg">
                   </div>
-                  <div class="col-sm-8">text here</div>
+                  <div class="col-sm-8">
+                    <p>I learned how to quilt by reading blogs and watching videos, it's a great way to relax and I find
+                      amazing that with some effort you can create a really awesome heirloom.</p>
+                    <div class="well well-sm">
+                      <p>I have been working in this queen size quilt for more than 5 years.</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -88,7 +94,12 @@
                   <div class="col-sm-4">
                     <img class="img-responsive" src="images/baking.jpg">
                   </div>
-                  <div class="col-sm-8">text here</div>
+                  <div class="col-sm-8">
+                    <p></p>
+                    <div class="well well-sm">
+                      <p></p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
