Added the text for the baking part.

--- a/interests.html
+++ b/interests.html
@@ -95,9 +95,9 @@
                     <img class="img-responsive" src="images/baking.jpg">
                   </div>
                   <div class="col-sm-8">
-                    <p></p>
+                    <p>I learn how to cook when I move in with my husband, about 3 years ago. One of the first things I learn was how to make cupcakes, I love to make them because I can be super creative with them and they also taste great!</p>
                     <div class="well well-sm">
-                      <p></p>
+                      <p>This is a raspberry cheesecake, it was great! Also featuring, my awesome hot pink mixer.</p>
                     </div>
                   </div>
                 </div>
