--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
       <ul>
         <li><a href="./index.html"><i class="fa fa-info"></i> About me</a></li>
         <li><a href="./projects.html"><i class="fa fa-briefcase"></i> Projects</a></li>
+        <li><a href="./interests.html"><i class="fa fa-smile-o"></i> Interests</a></li>
       </ul>
     </nav>
     <main>
