--- a/interests.html
+++ b/interests.html
@@ -52,7 +52,7 @@
                 <header><h2>Irish dancing</h2></header>
                 <div class="row">
                   <div class="col-sm-4">
-                    <img class="img-responsive" src="images/irish.jpg">
+                    <img class="img-responsive" src="images/irish.jpg" alt="My second perfomance">
                   </div>
                   <div class="col-sm-8">
                     <p>I started to dance in Santiago, Chile and I have been dancing for aproximately two and a half years.</p>
@@ -73,7 +73,7 @@
                 <header><h2>Quilting</h2></header>
                 <div class="row">
                   <div class="col-sm-4">
-                    <img class="img-responsive" src="images/quilt.jpg">
+                    <img class="img-responsive" src="images/quilt.jpg" alt="My queen size quilt in progress">
                   </div>
                   <div class="col-sm-8">
                     <p>I learned how to quilt by reading blogs and watching videos, it's a great way to relax and I find
@@ -92,7 +92,7 @@
                 <header><h2>Baking</h2></header>
                 <div class="row">
                   <div class="col-sm-4">
-                    <img class="img-responsive" src="images/baking.jpg">
+                    <img class="img-responsive" src="images/baking.jpg" alt="A cheesecake made by me">
                   </div>
                   <div class="col-sm-8">
                     <p>I learn how to cook when I move in with my husband, about 3 years ago. One of the first things I learn was how to make cupcakes, I love to make them because I can be super creative with them and they also taste great!</p>
