Added Kitties to Go and STP archery to the project list.

--- a/projects.html
+++ b/projects.html
@@ -19,28 +19,32 @@
       <ul id="projects-list">
         <li>
           <article>
-            <header>
-              <a href="https://github.com/tamararivera/semantic_tags"><h1>Semantic tags</h1></a>
-            </header>
-            <img src="./images/semantic-tags.png" width="350" height="200" alt="semantic tags assigment image">
-            <p>Example project to learn how to use the semantic tags on HTML5</p>
+            <div>
+              <header>
+                <a href="https://github.com/tamararivera/semantic_tags"><h1>Semantic tags</h1></a>
+              </header>
+              <p>Project to show how to use the new semantic tags on HTML5</p>
+            </div>
+            <div>
+              <img src="./images/semantic-tags.png" alt="semantic tags screenshot">
+            </div>
           </article>
         </li>
         <li>
           <article>
             <header>
-              <a href="#"><h1>A project</h1></a>
+              <a href="https://tamararivera.github.io/mockup-practice/"><h1>Kitties to Go</h1></a>
             </header>
-            <img src="http://lorempixel.com/200/200/cats/" alt="A project image">
-            <p>Cat is love, cat is life. Instantly break out into full speed gallop across the house for no reason. Stand in front of the computer screen. Make meme, make cute face stare at wall turn and meow stare at wall some more meow again continue staring meowzer! but bathe private parts with tongue then lick owner's face.</p>
+            <img src="./images/kitties-to-go.png" alt="Kitties to Go screenshot">
+            <p></p>
           </article>
         </li>
         <li>
           <article>
             <header>
-              <a href="#"><h1>Very interesting project</h1></a>
+              <a href="https://tamararivera.github.io/stp-archery/"><h1>STP Archery</h1></a>
             </header>
-            <img src="http://lorempixel.com/200/200/cats/" alt="Very interesting project image">
+            <img src="./images/stp-archery.png" alt="STP Archery screenshot">
             <p>Vommit food and eat it again meowing non stop for food yet lick butt, or have secret plans or leave hair everywhere, yet destroy the blinds. Run in circles hopped up on catnip, so steal the warm chair right after you get up groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked! i like big cats and i can not lie so chase dog then run away or purr.</p>
           </article>
         </li>
