Change the look for the first element on the projects list.

--- a/projects.html
+++ b/projects.html
@@ -19,14 +19,18 @@
       <ul id="projects-list">
         <li>
           <article>
-            <div>
-              <header>
-                <a href="https://github.com/tamararivera/semantic_tags"><h1>Semantic tags</h1></a>
-              </header>
-              <p>Project to show how to use the new semantic tags on HTML5</p>
-            </div>
-            <div>
-              <img src="./images/semantic-tags.png" alt="semantic tags screenshot">
+            <div class="overlay-parent">
+              <img src="./images/semantic-tags.png" alt="Semantic tags screenshot">
+              <a href="https://github.com/tamararivera/semantic_tags">
+                <div class="overlay">
+                  <div>
+                    <header>
+                      <h1>Semantic tags</h1>
+                    </header>
+                    <p>Project to show how to use the new semantic tags on HTML5</p>
+                  </div>
+                </div>
+              </a>
             </div>
           </article>
         </li>
