Added the rest of the projects with the same format.

--- a/projects.html
+++ b/projects.html
@@ -18,56 +18,63 @@
       <h2>Projects</h2>
       <ul id="projects-list">
         <li>
-          <article>
-            <div class="overlay-parent">
-              <img src="./images/semantic-tags.png" alt="Semantic tags screenshot">
-              <a href="https://github.com/tamararivera/semantic_tags">
-                <div class="overlay">
-                  <div>
-                    <header>
-                      <h1>Semantic tags</h1>
-                    </header>
-                    <p>Project to show how to use the new semantic tags on HTML5</p>
-                  </div>
+          <article class="overlay-parent">
+            <img src="./images/semantic-tags.png" alt="Semantic tags screenshot">
+            <a href="https://github.com/tamararivera/semantic_tags">
+              <div class="overlay">
+                <div>
+                  <header>
+                    <h1>Semantic tags</h1>
+                  </header>
+                  <p>Project to show how to use the new semantic tags on HTML5</p>
                 </div>
-              </a>
-            </div>
+              </div>
+            </a>
           </article>
         </li>
         <li>
-          <article>
-            <header>
-              <a href="https://tamararivera.github.io/mockup-practice/"><h1>Kitties to Go</h1></a>
-            </header>
+          <article class="overlay-parent">
             <img src="./images/kitties-to-go.png" alt="Kitties to Go screenshot">
-            <p></p>
+            <a href="https://tamararivera.github.io/mockup-practice/">
+              <div class="overlay">
+                <div>
+                  <header>
+                    <h1>Kitties to Go</h1>
+                  </header>
+                  <p>Fictional rent a cat site</p>
+                </div>
+              </div>
+            </a>
           </article>
         </li>
         <li>
-          <article>
-            <header>
-              <a href="https://tamararivera.github.io/stp-archery/"><h1>STP Archery</h1></a>
-            </header>
+          <article class="overlay-parent">
             <img src="./images/stp-archery.png" alt="STP Archery screenshot">
-            <p>Vommit food and eat it again meowing non stop for food yet lick butt, or have secret plans or leave hair everywhere, yet destroy the blinds. Run in circles hopped up on catnip, so steal the warm chair right after you get up groom yourself 4 hours - checked, have your beauty sleep 18 hours - checked, be fabulous for the rest of the day - checked! i like big cats and i can not lie so chase dog then run away or purr.</p>
+            <a href="https://tamararivera.github.io/stp-archery/">
+              <div class="overlay">
+                <div>
+                  <header>
+                    <h1>STP Archery</h1>
+                  </header>
+                  <p>Fictional Archery school site</p>
+                </div>
+              </div>
+            </a>
           </article>
         </li>
         <li>
-          <article>
-            <header>
-              <a href="#"><h1>Some awesome project</h1></a>
-            </header>
-            <img src="http://lorempixel.com/200/200/cats/" alt="Some awesome project image">
-            <p>Meow to be let in meowwww eat a plant, kill a hand for attack dog, run away and pretend to be victim. Instantly break out into full speed gallop across the house for no reason going to catch the red dot today going to catch the red dot today, but knock dish off table head butt cant eat out of my own dish my left donut is missing, as is my right and get video posted to internet for chasing red dot.</p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <header>
-              <a href="#"><h1>Another project</h1></a>
-            </header>
-            <img src="http://lorempixel.com/200/200/cats/" alt="Another project image">
-            <p>Scratch the furniture drink water out of the faucet so hiss at vacuum cleaner and brown cats with pink ears. Attack feet hola te quiero meow to be let in sit and stare meowwww spread kitty litter all over house. </p>
+          <article class="overlay-parent">
+            <img src="./images/interests.png" alt="Interests page screenshot">
+            <a href="interests.html">
+              <div class="overlay">
+                <div>
+                  <header>
+                    <h1>Interests</h1>
+                  </header>
+                  <p>My interests page using only Bootstrap 3</p>
+                </div>
+              </div>
+            </a>
           </article>
         </li>
       </ul>
