Added the meta viewport tag.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About me - Tamara Rivera</title>
     <script src="https://use.fontawesome.com/728dc040fb.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/first-stylesheet.css">
