--- a/considerations.html
+++ b/considerations.html
@@ -10,8 +10,14 @@
   <body>
     <nav>
       <ul>
-        <li><a href="./index.html"><i class="fa fa-info"></i> About me</a></li>
-        <li><a href="./projects.html"><i class="fa fa-briefcase"></i> Projects</a></li>
+        <div>
+          <li><a href="./index.html"><i class="fa fa-info"></i> About me</a></li>
+          <li><a href="./projects.html"><i class="fa fa-briefcase"></i> Projects</a></li>
+        </div>
+        <div>
+          <li><a href="./considerations.html">EN</a></li>
+          <li><a href="./consideraciones.html">ES</a></li>
+        </div>
       </ul>
     </nav>
     <main class="considerations">
