--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <nav>
       <ul>
-        <li><a href="./index.html"><i class="fa fa-info"></i> About me</a></li>
-        <li><a href="./projects.html"><i class="fa fa-briefcase"></i> Projects</a></li>
+        <div>
+          <li><a href="./index.html"><i class="fa fa-info"></i> About me</a></li>
+          <li><a href="./projects.html"><i class="fa fa-briefcase"></i> Projects</a></li>
+        </div>
       </ul>
     </nav>
     <main>
