Added new projects and changed a little bit the style.

--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,38 @@
       <ul id="projects-list">
         <li>
           <article class="overlay-parent">
+            <img src="./images/winter-wear-warehouse.png" alt="Winter Wear Warehouse screenshot">
+            <a href="https://tamararivera.github.io/html200-ecomm" target="_blank">
+              <div class="overlay">
+                <div>
+                  <header>
+                    <h1>Winter Wear Warehouse</h1>
+                  </header>
+                  <p>An imaginary e-commerce website</p>
+                </div>
+              </div>
+            </a>
+          </article>
+        </li>
+        <li>
+          <article class="overlay-parent">
+            <img src="./images/blog-post.png" alt="Blog post screenshot">
+            <a href="./considerations.html">
+              <div class="overlay">
+                <div>
+                  <header>
+                    <h1>Blog post</h1>
+                  </header>
+                  <p>A blog post about what I would consider when building a multilingual website</p>
+                </div>
+              </div>
+            </a>
+          </article>
+        </li>
+        <li>
+          <article class="overlay-parent">
             <img src="./images/semantic-tags.png" alt="Semantic tags screenshot">
-            <a href="https://github.com/tamararivera/semantic_tags">
+            <a href="https://github.com/tamararivera/semantic_tags" target="_blank">
               <div class="overlay">
                 <div>
                   <header>
@@ -37,7 +67,7 @@
         <li>
           <article class="overlay-parent">
             <img src="./images/kitties-to-go.png" alt="Kitties to Go screenshot">
-            <a href="https://tamararivera.github.io/mockup-practice/">
+            <a href="https://tamararivera.github.io/mockup-practice/" target="_blank">
               <div class="overlay">
                 <div>
                   <header>
@@ -52,7 +82,7 @@
         <li>
           <article class="overlay-parent">
             <img src="./images/stp-archery.png" alt="STP Archery screenshot">
-            <a href="https://tamararivera.github.io/stp-archery/">
+            <a href="https://tamararivera.github.io/stp-archery/" target="_blank">
               <div class="overlay">
                 <div>
                   <header>
@@ -67,7 +97,7 @@
         <li>
           <article class="overlay-parent">
             <img src="./images/interests.png" alt="Interests page screenshot">
-            <a href="interests.html">
+            <a href="./interests.html">
               <div class="overlay">
                 <div>
                   <header>
@@ -80,6 +110,7 @@
           </article>
         </li>
       </ul>
+      
     </main>
     <footer>
       <p><i class="fa fa-copyright" aria-hidden="true"></i> 2016 Tamara Rivera</p>
